MDL-47672 Enrolments, Themes: fix misalignment on enrolled users page

--- a/theme/bootstrapbase/less/moodle/core.less
+++ b/theme/bootstrapbase/less/moodle/core.less
@@ -1089,8 +1089,12 @@ tr.flagged-tag a {
 .userenrolment .subfield {
     margin-right: 5px;
 }
+.userenrolment .col_userdetails .subfield {
+    margin-left: 40px;
+}
 .userenrolment .col_userdetails .subfield_picture {
     float: left;
+    margin-left: 0;
 }
 .userenrolment .col_lastseen {
     width: 150px;
@@ -1203,8 +1207,13 @@ tr.flagged-tag a {
 .dir-rtl {
     &#page-enrol-users {
         .col_userdetails {
+            .subfield {
+                margin-right: 40px;
+                margin-left: 5px;
+            }
             .subfield_picture {
                 float: right;
+                margin-right: 0;
             }
         }
         .enrol_user_buttons {
